--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tankbattle" >
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,10 +28,12 @@
         </activity>
         <activity
             android:name=".activity.ListTankActivity"
+            android:icon="@drawable/tanks"
             android:label="@string/title_activity_list_tank" >
         </activity>
         <activity
             android:name=".activity.AddTankActivity"
+            android:icon="@drawable/tank"
             android:label="@string/title_activity_add_tank" >
         </activity>
     </application>
