--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,13 @@
             android:name=".activity.AddEquipeActivity"
             android:label="@string/title_activity_add_equipe" >
         </activity>
+        <activity
+            android:name=".activity.CreateBatailleActivity"
+            android:label="@string/title_activity_create_bataille" >
+        </activity>
+
+
+
     </application>
 
 </manifest>
