--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
 
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:icon="@drawable/takbattle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,19 +39,23 @@
         </activity>
         <activity
             android:name=".activity.ListEquipeActivity"
-            android:label="@string/title_activity_list_equipe" >
+            android:label="@string/title_activity_list_equipe"
+            android:icon="@drawable/takbattle">
         </activity>
         <activity
             android:name=".activity.AddEquipeActivity"
-            android:label="@string/title_activity_add_equipe" >
+            android:label="@string/title_activity_add_equipe"
+            android:icon="@drawable/takbattle">
         </activity>
         <activity
             android:name=".activity.CreateBatailleActivity"
-            android:label="@string/title_activity_create_bataille" >
+            android:label="@string/title_activity_create_bataille"
+            android:icon="@drawable/takbattle">
         </activity>
         <activity
             android:name=".activity.BatailleActivity"
-            android:label="@string/title_activity_bataille" >
+            android:label="@string/title_activity_bataille"
+            android:icon="@drawable/takbattle">
         </activity>
 
 
