--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tankbattle" >
+    package="com.cavalier" >
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/takbattle"
+        android:icon="@drawable/horse"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="TankBattle.db" />
+            android:value="Cavalier.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
@@ -20,45 +20,22 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:icon="@drawable/takbattle">
+            android:icon="@drawable/cavalier">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.ListTankActivity"
-            android:icon="@drawable/tanks"
-            android:label="@string/title_activity_list_tank" >
+            android:name=".activity.ListPersonneActivity"
+            android:icon="@drawable/cavalier"
+            android:label="@string/title_activity_list_personne" >
         </activity>
         <activity
-            android:name=".activity.AddTankActivity"
-            android:icon="@drawable/tank"
-            android:label="@string/title_activity_add_tank" >
+            android:name=".activity.AddPersonneActivity"
+            android:icon="@drawable/cavalier"
+            android:label="@string/title_activity_add_personne" >
         </activity>
-        <activity
-            android:name=".activity.ListEquipeActivity"
-            android:label="@string/title_activity_list_equipe"
-            android:icon="@drawable/takbattle">
-        </activity>
-        <activity
-            android:name=".activity.AddEquipeActivity"
-            android:label="@string/title_activity_add_equipe"
-            android:icon="@drawable/takbattle">
-        </activity>
-        <activity
-            android:name=".activity.CreateBatailleActivity"
-            android:label="@string/title_activity_create_bataille"
-            android:icon="@drawable/takbattle">
-        </activity>
-        <activity
-            android:name=".activity.BatailleActivity"
-            android:label="@string/title_activity_bataille"
-            android:icon="@drawable/takbattle">
-        </activity>
-
-
 
     </application>
 
