--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.tankbattle"
+        applicationId "com.cavalier"
         minSdkVersion 16
         targetSdkVersion 16
         versionCode 1
