--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,12 +51,12 @@
         </activity>
         <activity
             android:name=".activity.ListCoursActivity"
-            android:icon="@drawable/cavalier"
+            android:icon="@drawable/selle"
             android:label="@string/title_activity_list_cours" >
         </activity>
         <activity
             android:name=".activity.AddCoursActivity"
-            android:icon="@drawable/cavalier"
+            android:icon="@drawable/selle"
             android:label="@string/title_activity_add_cours" >
         </activity>
         <activity
