--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/horse"
+        android:icon="@drawable/home"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
@@ -23,7 +23,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:icon="@drawable/cavalier">
+            android:icon="@drawable/home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
