--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
             storePassword 'x37db7t7'
         }
     }
-    compileSdkVersion 16
+    compileSdkVersion 23
     buildToolsVersion "23.0.1"
     defaultConfig {
         applicationId "com.cavalier"
@@ -42,6 +42,7 @@ dependencies {
     compile files('libs/achartengine-1.1.0.jar')
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.github.alamkanak:android-week-view:1.2.6'
 }
 
 
