--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 16
         versionCode 6
-        versionName "1.5"
+        versionName "1.6"
     }
     buildTypes {
         release {
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.github.alamkanak:android-week-view:1.2.6'
+    compile 'com.turki-alkhateeb:materialcolorpicker:1.0.7'
 }
 
 
