--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
             android:value="Cavalier.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="3" />
-        <meta-data
-            android:name="AA_MODELS"
-            android:value="com.cavalier.model.Item, com.cavalier.model.Category" />
+            android:value="7" />
+        <!--<meta-data-->
+            <!--android:name="AA_MODELS"-->
+            <!--android:value="com.cavalier.model.Item, com.cavalier.model.Category" />-->
 
         <activity
             android:name=".activity.MainActivity"
