--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:value="Cavalier.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="7" />
+            android:value="8" />
         <!--<meta-data-->
             <!--android:name="AA_MODELS"-->
             <!--android:value="com.cavalier.model.Item, com.cavalier.model.Category" />-->
@@ -81,6 +81,11 @@
             android:name=".activity.PlanningActivity"
             android:icon="@drawable/planning"
             android:label="@string/action_planning" >
+        </activity>
+        <activity
+            android:name=".activity.AddPlanningEventActivity"
+            android:icon="@drawable/selle"
+            android:label="@string/title_activity_add_planning" >
         </activity>
         <activity
             android:name=".activity.HttpActivity"
