--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compile files('libs/achartengine-1.1.0.jar')
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.github.alamkanak:android-week-view:1.2.6'
+//    compile 'com.github.alamkanak:android-week-view:1.2.6'
     compile 'com.turki-alkhateeb:materialcolorpicker:1.0.7'
 }
 
