--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
     buildToolsVersion "23.0.1"
     defaultConfig {
         applicationId "com.cavalier"
-        minSdkVersion 16
-        targetSdkVersion 16
+        minSdkVersion 21
+        targetSdkVersion 21
         versionCode 6
         versionName "1.6"
     }
@@ -28,6 +28,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    productFlavors {
+    }
 }
 repositories {
     mavenCentral()
@@ -36,13 +38,13 @@ repositories {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:support-v4:23.0.1'
     compile files('libs/achartengine-1.1.0.jar')
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.volley:volley:1.0.0'
-//    compile 'com.github.alamkanak:android-week-view:1.2.6'
+    //    compile 'com.github.alamkanak:android-week-view:1.2.6'
     compile 'com.turki-alkhateeb:materialcolorpicker:1.0.7'
 }
 
