--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.cavalier"
         minSdkVersion 21
         targetSdkVersion 21
-        versionCode 6
-        versionName "1.6"
+        versionCode 7
+        versionName '1.7'
     }
     buildTypes {
         release {
